fixed button alignment home page

--- a/husky-learn/src/app/components/home/home.component.scss
+++ b/husky-learn/src/app/components/home/home.component.scss
@@ -22,7 +22,7 @@ mat-card-header{
 }
 .title-btn{
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     padding: 0px
 }
 .fav-btn{
